# AoiGram

.github/workflows/: build.yml
TMessagesProj/: build.gradle
TMessagesProj/jni/colorado/: CMakeLists.txt  colorado.h  colorado_package_name.h.in
TMessagesProj/src/main/java/org/telegram/messenger/: BuildVars.java
TMessagesProj/src/main/java/org/telegram/ui/: IntroActivity.java  SessionBottomSheet.java
TMessagesProj/src/main/java/org/telegram/ui/Cells/: SessionCell.java
TMessagesProj/src/main/java/tw/nekomimi/nekogram/: Extra.java
TMessagesProj_App/: build.gradle
